# meg

./: Cargo.toml  LICENSE  rusty-tags.vi  shell.nix
examples/: factorial.meg  fibonacci.meg  hello.meg  test.meg
src/: errors.rs  interpreter.rs  ir.rs  lexer.rs  llvm.rs  main.rs  parser.rs
